--- a/style.css
+++ b/style.css
@@ -40,35 +40,28 @@ html {
   position: relative;
   height: 100vh;
   overflow: hidden;
+  transition: opacity 0.8s ease;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 1;
 }
 
-.background a {
-  display: block;
-  width: 100%;
-  height: 100%;
-}
-
-.background a img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.background .overlay img {
+.bg-layer {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   opacity: 0;
-  transition: opacity 5s ease-in-out;
-  pointer-events: none;
+  transition: opacity 1s ease;
 }
 
-body.reveal .background .overlay img {
-  opacity: 1;
-  pointer-events: auto;
+#bg1, #bg2 {
+  z-index: -1;
 }
 
 h1 {
