--- a/style.css
+++ b/style.css
@@ -47,21 +47,32 @@ html {
   opacity: 1;
 }
 
+.background a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
 .bg-layer {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  object-fit: cover;
   opacity: 0;
-  transition: opacity 1s ease;
+  transition: opacity 2.5s ease;
 }
 
-#bg1, #bg2 {
-  z-index: -1;
+#bg1 {
+  opacity: 1;
+}
+
+#bg2 {
+  opacity: 0;
 }
 
 h1 {
