--- a/style.css
+++ b/style.css
@@ -56,6 +56,22 @@ html {
   display: block;
 }
 
+#link1, #link2 {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: block;
+  transition: opacity 2s ease;
+}
+#link1 img, #link2 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
+
 .bg-layer {
   position: absolute;
   top: 0;
