--- a/style.css
+++ b/style.css
@@ -47,6 +47,11 @@ html {
   height: 100%;
   display: block;
   transition: opacity 2s ease;
+  pointer-events: none; 
+}
+
+.background a.active {
+  pointer-events: auto;
 }
 
 #link1, #link2 { width: 100%; height: 100%; }
