--- a/style.css
+++ b/style.css
@@ -107,7 +107,6 @@ form label {
   height: 50px;
   width: 50px;
   background-color: var(--accent-color);
-  color: var(--base-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -118,7 +117,7 @@ form label {
 }
 
 form label i {
-  color: var(--text-color);
+  color: var(--text-color); /* black by default */
 }
 
 form input {
@@ -145,10 +144,35 @@ form input {
   border: none;
 }
 
+.input-group button i {
+  color: var(--text-color); /* black by default */
+}
+
 .input-group button:hover,
 .input-group button:focus {
   background-color: var(--text-color);
   color: var(--base-color);
+}
+
+.input-group.correct {
+  border-color: #00ff00;
+}
+
+.input-group.correct label,
+.input-group.correct button {
+  background-color: #00ff00;
+  color: var(--text-color);
+}
+
+.input-group.incorrect {
+  border-color: #ff0000;
+}
+
+.input-group.incorrect label,
+.input-group.incorrect button,
+.input-group.incorrect i {
+  background-color: #ff0000;
+  color: var(--base-color); /* white for icons and button text */
 }
 
 #submit {
@@ -167,34 +191,5 @@ form input {
 
 #submit:hover {
   background-color: var(--text-color);
-  color: var(--base-color);
-}
-
-#code {
-  width: 100%;
-  color: transparent;
-  white-space: pre-wrap;
-  text-align: center;
-  font-size: 1rem;
-  overflow: auto;
-}
-
-.input-group.correct {
-  border-color: #00ff00;
-}
-
-.input-group.correct label,
-.input-group.correct button {
-  background-color: #00ff00;
-  color: var(--text-color);
-}
-
-.input-group.incorrect {
-  border-color: #ff0000;
-}
-
-.input-group.incorrect label,
-.input-group.incorrect button {
-  background-color: #ff0000;
   color: var(--base-color);
 }
