--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ form label {
 }
 
 form label i {
-  color: var(--text-color); /* black by default */
+  color: var(--text-color);
 }
 
 form input {
@@ -145,7 +145,7 @@ form input {
 }
 
 .input-group button i {
-  color: var(--text-color); /* black by default */
+  color: var(--text-color);
 }
 
 .input-group button:hover,
@@ -172,7 +172,7 @@ form input {
 .input-group.incorrect button,
 .input-group.incorrect i {
   background-color: #ff0000;
-  color: var(--base-color); /* white for icons and button text */
+  color: var(--base-color);
 }
 
 #submit {
@@ -192,4 +192,14 @@ form input {
 #submit:hover {
   background-color: var(--text-color);
   color: var(--base-color);
+}
+
+#code {
+  color: transparent;
+  user-select: text;
+  -webkit-user-select: text;
+  white-space: pre-wrap;
+  text-align: center;
+  font-size: 1rem;
+  overflow: auto;
 }
