--- a/style.css
+++ b/style.css
@@ -46,12 +46,16 @@ html {
   width: 100%;
   height: 100%;
   display: block;
+  opacity: 0;
   transition: opacity 2s ease;
-  pointer-events: none; 
+  pointer-events: none;
+  z-index: 0;
 }
 
 .background a.active {
+  opacity: 1;
   pointer-events: auto;
+  z-index: 1;
 }
 
 #link1, #link2 { width: 100%; height: 100%; }
