--- a/style.css
+++ b/style.css
@@ -50,12 +50,12 @@ html {
   transition: opacity 2.5s ease-in-out;
   pointer-events: none;
   z-index: 0;
+  background: none;
 }
 
 .background a.active {
   opacity: 1;
-  z-index: 2;
-  pointer-events: auto;
+  z-index: 1;
 }
 
 .background a.fading-out {
