--- a/style.css
+++ b/style.css
@@ -160,6 +160,7 @@ form input {
 }
 
 #submit {
+  position: relative;
   margin-top: 10px;
   padding: .85em 4em;
   border: none;
@@ -170,7 +171,11 @@ form input {
   font-weight: 600;
   text-transform: uppercase;
   cursor: pointer;
-  transition: background 0.2s ease, color 0.2s ease;
+  transition: left 0.5s ease, top 0.5s ease, background 0.2s ease, color 0.2s ease;
+}
+
+#submit:active {
+  cursor: grabbing;
 }
 
 #submit:hover {
