--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ h1 {
 }
 
 form {
+  position: relative;
   width: min(400px, 100%);
   margin: 20px 0 50px;
   display: flex;
@@ -160,7 +161,7 @@ form input {
 }
 
 #submit {
-  position: relative;
+  position: absolute;
   z-index: 2;
   margin-top: 10px;
   padding: .85em 4em;
